<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DaytimeTacoMenu">

    <ScrollView
        android:id="@+id/daytimeSelection"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="60dp"
        android:layout_above="@id/completeSelection"
        android:layout_alignParentTop="true"
        tools:context=".CustomItem"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"

            >

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mainBreakfast"
                android:orientation="vertical"
                android:layout_below="@+id/bMainLabel"
                android:layout_gravity="center_horizontal"

                >
                <TextView
                    android:id="@+id/bMainLabel"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/taco_selection_label"
                    android:textSize="50sp"
                    android:padding="10dp"

                    />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/dtBeef"
                    android:text="@string/beef_taco_op"
                    android:textSize = "30sp"
                    android:padding="10dp"

                    />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/dtChicken"
                    android:text="@string/chicken_taco_op"
                    android:textSize = "30sp"
                    android:padding="10dp"
                    />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/dtVeggie"
                    android:text="@string/veggie_taco_op"
                    android:textSize = "30sp"
                    android:padding="10dp"
                    />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/dtBean"
                    android:text="@string/bean_taco_op"
                    android:textSize = "30sp"
                    android:padding="10dp"
                    />

            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="#A9A9A9"
                android:layout_margin="10dp"
                />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/toppingBreakfast"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"

                >
                <TextView
                    android:id="@+id/bToppingLabel"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/topping_selection_label"
                    android:textSize="50sp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="10dp"


                    />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/dtCheese"
                    android:text="@string/cheese_top_op"
                    android:textSize = "30sp"
                    android:padding="10dp"
                    />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/dtSourCream"
                    android:text="@string/sour_cream_top_op"
                    android:textSize = "30sp"
                    android:padding="10dp"
                    />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/dtAvocado"
                    android:text="@string/avocado_top_op"
                    android:textSize = "30sp"
                    android:padding="10dp"
                    />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/dtRfBeans"
                    android:text="@string/refried_beans_top_op"
                    android:textSize = "30sp"
                    android:padding="10dp"
                    />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/dtLettuce"
                    android:text="@string/lettuce_top_op"
                    android:textSize = "30sp"
                    android:padding="10dp"
                    />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/dtTomato"
                    android:text="@string/tomato_top_op"
                    android:textSize = "30sp"
                    android:padding="10dp"
                    />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/dtSalsa"
                    android:text="@string/salsa_top_op"
                    android:textSize = "30sp"
                    android:padding="10dp"
                    />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/dtPico"
                    android:text="@string/pico_top_op"
                    android:textSize = "30sp"
                    android:padding="10dp"
                    />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/dtCVeggies"
                    android:text="@string/cveggies_top_op"
                    android:textSize = "30sp"
                    android:padding="10dp"
                    />

            </RadioGroup>

        </LinearLayout>



    </ScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/completeSelection"
        android:layout_alignRight="@id/daytimeSelection"
        android:text="Continue Order"
        android:textSize="30dp"
        android:padding="10dp"
        android:layout_margin="20dp"
        android:layout_alignParentBottom="true"
        >

    </Button>




</RelativeLayout>