<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BreakfastMenu">



    <ScrollView
        android:id="@+id/breakfastSelection"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="60dp"
        android:layout_above="@id/completeBTacoSelection"
        android:layout_alignParentTop="true"
        tools:context=".CustomItem"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mainBreakfast"
                android:orientation="vertical"

                android:layout_gravity="center_horizontal"

                >
                <TextView
                    android:id="@+id/bMainLabel"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/taco_selection_label"
                    android:textSize="50sp"
                    android:padding="10dp"

                    />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/bEggs"
                    android:text="@string/egg_taco_op"
                    android:textSize = "30sp"
                    android:padding="10dp"

                    />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/bBeans"
                    android:text="@string/bean_taco_op"
                    android:textSize = "30sp"
                    android:padding="10dp"
                    />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/bBacon"
                    android:text="@string/bacon_taco_op"
                    android:textSize = "30sp"
                    android:padding="10dp"
                    />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/bSausage"
                    android:text="@string/sausage_taco_op"
                    android:textSize = "30sp"
                    android:padding="10dp"
                    />

            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="#A9A9A9"
                android:layout_margin="10dp"
                />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/toppingBreakfast"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"

                >
                <TextView
                    android:id="@+id/bToppingLabel"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/topping_selection_label"
                    android:textSize="50sp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="10dp"


                    />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/bCheese"
                    android:text="@string/cheese_top_op"
                    android:textSize = "30sp"
                    android:padding="10dp"
                    />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/bSourCream"
                    android:text="@string/sour_cream_top_op"
                    android:textSize = "30sp"
                    android:padding="10dp"
                    />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/bAvocado"
                    android:text="@string/avocado_top_op"
                    android:textSize = "30sp"
                    android:padding="10dp"
                    />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/bRfBeans"
                    android:text="@string/refried_beans_top_op"
                    android:textSize = "30sp"
                    android:padding="10dp"
                    />

            </RadioGroup>

        </LinearLayout>



    </ScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/completeBTacoSelection"
        android:layout_alignRight="@id/breakfastSelection"
        android:text="Continue Order"
        android:textSize="30sp"
        android:padding="10dp"
        android:layout_margin="20dp"
        android:layout_alignParentBottom="true"
        >

    </Button>




</RelativeLayout>